gcc/testsuite/rust/rustc/ui/issues/issue-40510-3.rs
#![allow(unused)]

fn f() {
    let mut x: Vec<()> = Vec::new();

    || {
        || {
            x.push(())
        }
// { dg-error "" "" { target *-*-* } .-3 }
    };
}

fn main() {}

